Alignment fix

--- a/style.scss
+++ b/style.scss
@@ -106,6 +106,6 @@ body {
     height: 80vh;
   }
   .sidebar {
-    margin-left: -30rem;
+    margin-left: -26rem;
   }
 }
